# ws-example

./: .gitignore  CHANGELOG.md  README.md  deploy.py  openapi.yaml  pyproject.toml  release.config.mjs  renovate.json
.github/workflows/: check.yml  deploy.yml  release.yml
anonboard/: __init__.py  __main__.py  cli.py  store.py  ws.py
anonboard/static/: common.js  openapi.yaml  student.js  styles.css  teacher.js
anonboard/templates/: ask.html  index.html  openapi.html
backend/: README.md  pyproject.toml
backend/anonboard/: ws.py
backend/anonboard/static/: styles.css
backend/tests/: test_store.py  test_ws.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: student.html  teacher.html
frontend/public/assets/: common.js  student.js  styles.css  teacher.js
frontend/src/: server.js  server.test.js  ui.test.js
tests/: test_cli.py  test_my_class.py  test_store.py  test_ws.py
ws-example/: __init__.py  __main__.py
