[tool.poetry]
name = "anonboard"
packages = [
    { include = "anonboard" },
]
version = "1.1.1"
description = "A template for Python projects, using Poetry"
authors = ["Giovanni Ciatto <giovanni.ciatto@unibo.it>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
# update the Python versions in .github/workflows/check.yml if you change this
python = ">= 3.10.0 < 4.0.0"
flask = "^3.1.2"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.37.0"
poetry = "^1.8.3"
pytest = "^8.3.5"
ruff = "^0.15.0"
types-PyYAML = "^6.0.12"

[tool.poe.tasks]
serve = "python -m anonboard"
serve-publicly = "python -m anonboard --host 0.0.0.0"
test = "pytest"
coverage = "coverage run -m pytest"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
ruff-check = "ruff check"
ruff-fix = "ruff check --fix"
format = "ruff format"
format-check = "ruff format --check"
mypy = "mypy anonboard tests"
compile = "python -m compileall anonboard tests"
static-checks = [
    "compile",
    "format-check",
    "ruff-check",
    "mypy",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
